--- a/contrib/x-hastec/Dockerfile
+++ b/contrib/x-hastec/Dockerfile
@@ -1,4 +1,6 @@
 FROM rwstauner/haste-compiler
-RUN haste-cabal update
-RUN haste-cabal install parsec-3.1.1
-RUN chmod -R +x /root
+RUN haste-cabal update && \
+    haste-cabal install parsec-3.1.1 && \
+    rm -rf /root/.cabal && \
+    chmod -R +x /root && \
+    chmod +r /root
